Fri Oct 29 18:52:38 1999  Nick Clifton  <nickc@cygnus.com>

	* config/arm/arm.c (thumb_expand_prologue): Emit a USE of the
	scratch low register so that it will not be deleted.

Fri Oct 29 15:23:48 1999  Nick Clifton  <nickc@cygnus.com>

	* config/arm/pe.h (ARM_PE): Define.
	
	* config/arm/arm.c (arm_valid_machine_decl_attribute): Allow
	interfacearm attribute if this is a PE toolchain.
	(output_return_instruction): Do not emit anything if the function
	has the naked attribute set.
	(is_called_in_ARM_mode): If the function has the interfacearm
	attribute then return true.
	(thumb_expand_prologue): Do not generate a prologue for naked
	functions.
	(thumb_expand_epilogue): Do not generate an epilogie for a naked
	function.
	(output_thumb_prologue): Do not bother if the function is naked.
	Strip PE encoding from function name before emitting.

Thu Oct 28 11:05:13 1999  Richard Earnshaw <rearnsha@arm.com>

	* arm.md (casesi_insn): Add a clobber of the condition code
	register.
	(pic_load_addr): Fix constraints.

	* arm.md (casesi_insn): Fix mis-applied patch.

	* arm.md ("core" function unit): Add rules for single- and
	multi-cycle insns.
	(All TARGET_THUMB patterns): Add "type" attribute information
	where needed.
	* arm.c (arm_adjust_cost): Reduce the cost of a data dependency if
	the following insn is a CALL.

	* arm.c (thumb_expand_epilogue): Add a use of the adjusted stack
	pointer.
	* arm.h (CONDITIONAL_REGISTER_USAGE): Nail down the 
	ARM_HARD_FRAME_POINTER_REGNUM when TARGET_APCS_FRAME.
	(FRAME_POINTER_REQUIRED): Only check TARGET_APCS_FRAME if TARGET_ARM.
	
Thu Oct 28 10:00:48 1999  Nick Clifton  <nickc@cygnus.com>

	* config/arm/arm.c: Initialise arm_structure_size_boundary to
	DEFAULT_STRUCTURE_SIZE_BOUNDARY.
	* config/arm/arm.h (DEFAULT_STRUCTURE_SIZE_BOUNDARY): Define
	to the value 32 if it has not already been defined.
	* config/arm/netbsd.h (DEFAULT_STRUCTURE_SIZE_BOUNDARY):
	Override definition in arm.h with a value of 8.
