@@ -8267,40 +8267,63 @@ thumb_expand_prologue ()
     {
       if (amount < 512)
 	emit_insn (gen_addsi3 (stack_pointer_rtx, stack_pointer_rtx,
-			       GEN_INT (-amount)));
+			       GEN_INT (- amount)));
       else
 	{
-	  rtx reg;
-	  rtx spare;
-	  int live_regs_mask;
 	  int regno;
-      
-	  live_regs_mask = 0;
-      
-	  for (regno = 0; regno <= LAST_LO_REGNUM; regno ++)
-	    if (regs_ever_live[regno] && ! call_used_regs[regno]
-		&& ! (TARGET_SINGLE_PIC_BASE && (regno == arm_pic_register)))
-	      live_regs_mask |= 1 << regno;
+	  rtx reg;
 
-	  if ((live_regs_mask & 0xff) == 0) /* Very unlikely.  */
-	    emit_insn (gen_movsi (spare = gen_rtx (REG, SImode, IP_REGNUM),
-				  reg = gen_rtx (REG, SImode, 4)));
+	  /* The stack decrement is too big for an immediate value in a single
+	     insn.  In theory we could issue multiple subtracts, but after
+	     three of them it becomes more space efficient to place the full
+	     value in the constant pool and load into a register.  (Also the
+	     ARM debugger really likes to see only one stack decrement per
+	     function).  So instead we look for a scratch register into which
+	     we can load the decrement, and then we subtract this from the
+	     stack pointer.  Unfortunately on the thumb the only available
+	     scratch registers are the argument registers, and we cannot use
+	     these as they may hold arguments to the function.  Instead we
+	     attempt to locate a call preserved register which is used by this
+	     function.  If we can find one, then we know that it will have
+	     been pushed at the start of the prologue and so we can corrupt
+	     it now.  */
+	  for (regno = LAST_ARG_REGNUM + 1; regno <= LAST_LO_REGNUM; regno++)
+	    if (regs_ever_live[regno]
+		&& ! call_used_regs[regno] /* Paranoia */
+		&& ! (TARGET_SINGLE_PIC_BASE && (regno == arm_pic_register)))
+	      break;
+
+	  if (regno > LAST_LO_REGNUM) /* Very unlikely */
+	    {
+	      rtx spare = gen_rtx (REG, SImode, IP_REGNUM);
+
+	      /* Choose an arbitary, non-argument low register.  */
+	      reg = gen_rtx (REG, SImode, LAST_LO_REGNUM);
+
+	      /* Save it by copying it into a high, scratch register.  */
+	      emit_insn (gen_movsi (spare, reg));
+
+	      /* Decrement the stack.  */
+	      emit_insn (gen_movsi (reg, GEN_INT (- amount)));
+	      emit_insn (gen_addsi3 (stack_pointer_rtx, stack_pointer_rtx,
+				     reg));
+
+	      /* Restore the low register's original value.  */
+	      emit_insn (gen_movsi (reg, spare));
+	      
+	      /* Emit a USE of the restored scratch register, so that flow
+		 analysis will not consider the restore redundant.  The
+		 register won't be used again in this function and isn't
+		 restored by the epilogue.  */
+	      emit_insn (gen_rtx_USE (VOIDmode, reg));
+	    }
 	  else
 	    {
-	      for (regno = 0; regno <= LAST_LO_REGNUM; regno ++)
-		if (live_regs_mask & (1 << regno))
-		  break;
 	      reg = gen_rtx (REG, SImode, regno);
-	    }
 
-	  emit_insn (gen_movsi (reg, GEN_INT (-amount)));
-	  emit_insn (gen_addsi3 (stack_pointer_rtx, stack_pointer_rtx, reg));
-	  
-	  if ((live_regs_mask & 0xff) == 0)
-	    {
-	      emit_insn (gen_movsi (reg, spare));
-	      /* Emit a USE (reg), so that it will not be deleted.  */
-	      emit_insn (gen_rtx_USE (VOIDmode, reg));
+	      emit_insn (gen_movsi (reg, GEN_INT (- amount)));
+	      emit_insn (gen_addsi3 (stack_pointer_rtx, stack_pointer_rtx,
+				     reg));
 	    }
 	}
     }
