@@ -1,3 +1,8 @@
+Mon Nov  1 14:21:00 1999  Nick Clifton  <nickc@cygnus.com>
+
+	* config/arm/arm.c (thumb_expand_prologue): Add comments
+	explaining what is goin on in this function.
+
 Fri Oct 29 18:52:38 1999  Nick Clifton  <nickc@cygnus.com>
 
 	* config/arm/arm.c (thumb_expand_prologue): Emit a USE of the
